<resources>
    <string name="app_name">Mechanica</string>

    <string name="logo_des">Logo</string>

    <!--User role-->
    <string name="user_role_customer">I am customer</string>
    <string name="user_role_mechanic">I am mechanic</string>


    <!--Sign Up or Login-->
    <string name="hint_username">Username</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_phone_num">Phone Number</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="question_dont_have_acc">Don\'t have an account?</string>
    <string name="btn_text_sign_up_here">Sign Up Here</string>
    <string name="btn_text_back">Back</string>

    <string name="google_map_api_key">AIzaSyCPhWX1bh-D_81D_1iRMcINDcPszAmhJD8</string>
    <!--<string name="google_map_api_key">AIzaSyAWegLxsspwmG6N0Vm8cGkN_aa3dLcsi9Q</string>-->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="vehicle_info">Vehicle Information</string>
    <string name="hint_vehicle_make">Vehicle Make</string>
    <string name="hint_vehicle_type">Vehicle Type</string>
    <string name="hint_vehicle_model">Vehicle Model</string>
    <string name="btn_text_submit">Submit</string>
</resources>
