<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    tools:context="com.example.fyp.mechanica.UpdateProfileActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vehicle_info"
        android:textAlignment="center"
        android:textSize="@dimen/font_large"
        android:textStyle="bold"
        android:textColor="@color/blue"/>

    <EditText
        android:id="@+id/et_vehicle_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_border"
        android:padding="@dimen/spacing_small"
        android:layout_margin="@dimen/spacing_ex_small"
        android:hint="@string/hint_vehicle_type"/>

    <EditText
        android:id="@+id/et_vehicle_make"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_border"
        android:padding="@dimen/spacing_small"
        android:layout_margin="@dimen/spacing_ex_small"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_vehicle_make"/>

    <EditText
        android:id="@+id/et_vehicle_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_border"
        android:padding="@dimen/spacing_small"
        android:layout_margin="@dimen/spacing_ex_small"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_vehicle_model"/>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_text_submit"
        android:textColor="@color/white"
        android:layout_marginHorizontal="@dimen/spacing_small"
        android:layout_marginVertical="@dimen/spacing_normal"
        android:background="@drawable/button_corner_radius"/>


</LinearLayout>
