<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.irfan.mechanica.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="@dimen/spacing_login_side_margin"
        android:layout_marginLeft="@dimen/spacing_login_side_margin"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/spacing_big"
            android:contentDescription="@string/logo_des"/>

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:padding="@dimen/spacing_small"
            android:layout_margin="@dimen/spacing_ex_small"
            android:hint="@string/hint_username"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:padding="@dimen/spacing_small"
            android:layout_margin="@dimen/spacing_ex_small"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email"/>

        <EditText
            android:id="@+id/et_mobile_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:padding="@dimen/spacing_small"
            android:layout_margin="@dimen/spacing_ex_small"
            android:inputType="number"
            android:hint="@string/hint_phone_num"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_small"
            android:layout_margin="@dimen/spacing_ex_small"
            android:background="@drawable/edit_text_border"
            android:inputType="textPassword"
            android:hint="@string/hint_password"/>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:layout_marginHorizontal="@dimen/spacing_small"
            android:layout_marginVertical="@dimen/spacing_normal"
            android:background="@drawable/button_corner_radius"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/spacing_normal"
            android:layout_marginLeft="@dimen/spacing_normal"
            android:layout_marginRight="@dimen/spacing_normal"
            android:background="@color/gray"/>

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/blue"
            android:background="@color/white"
            android:stateListAnimator="@null"
            android:textAllCaps="false"
            android:textSize="@dimen/font_normal"
            android:text="@string/btn_text_back"/>

    </LinearLayout>

</RelativeLayout>
