<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.fyp.mechanica.UserRoleActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/logo_des"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_customer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_role_customer"
            android:textColor="@color/white"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:layout_marginVertical="@dimen/spacing_normal"
            android:background="@drawable/button_corner_radius"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray" />

        <Button
            android:id="@+id/btn_mechanic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_role_mechanic"
            android:textColor="@color/white"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:layout_marginVertical="@dimen/spacing_normal"
            android:background="@drawable/button_corner_radius"/>

    </LinearLayout>

</RelativeLayout>
